--- a/projetomundo1/index.html
+++ b/projetomundo1/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="caixa">
             <h1>Curiosidades de Tecnologia</h1>
-            <p>Tudo aquilo que você sempre quis saber sobre o mundo <br />Tech, em um único lugar</p>
+            <p>Tudo aquilo que você sempre quis saber sobre o mundoTech, em um único lugar</p>
         </div>
     </header>
 
